# agent-vm

./: .gitignore  .hlint.yaml  AGENT_ISOLATION.md  ARCHITECTURE.md  HASKELL_MIGRATION.md  README.md  SELENIUM.md  SOCAT.md  TODO.md  agent-service.nix  agent-vm.cabal  agent-vm.py  cabal.project  check_fixtures.sh  codemcp.toml  debug_agent_service.py  flake.nix  integration-test.py  mcp_language_haskell.sh  mcp_rescript_lsp.sh  mcp_selenium.sh  overlay.nix  pyproject.toml  run-integration-test.sh  run-spec.sh  run_branch_log.sh  run_cabal.sh  run_format.sh  start.sh  test_chrome_headless.py  vm-config.nix
agent-vm/: .gitignore  CHANGELOG.md  README.md  __init__.py  agent-vm.cabal  cabal.project.local-dev  integration-test.py  pyproject.toml
agent-vm-py/: conftest.py  pyproject.toml
agent-vm-py/agent_vm/: integration_test.py  main.py  utils.py  vm_controller.py
agent-vm-py/agent_vm/tests/: conftest.py  test_integration_workflows.py  test_unit_vm_controller.py
agent-vm/agent_vm/: integration_test.py  main.py  utils.py  vm_controller.py
agent-vm/app/: Main.hs
agent-vm/integration-test/: Main.hs
agent-vm/nix/: hix.nix
agent-vm/src/: AgentVM.hs
agent-vm/src/AgentVM/: Class.hs  Config.hs  Env.hs  Log.hs  Monad.hs  Nix.hs  Process.hs  SSH.hs  State.hs  Types.hs
agent-vm/test/: Spec.hs
agent-vm/test/AgentVM/: IntegrationSpec.hs  NixSpec.hs  ProcessSpec.hs  StateSpec.hs
agent-vm/tests/: conftest.py  test_integration_workflows.py
agent_vm/: README.md  __init__.py  main.py  pyproject.toml  vm_controller.py
agent_vm/tests/: conftest.py  test_integration_workflows.py  test_unit_vm_controller.py
app/: Main.hs
docs/: SELENIUM.md
integration-test/: Main.hs
integration-test/AgentVM/: NixSpec.hs  ResetDestroySpec.hs  ShellEscapeKeySpec.hs  VMLifecycleSpec.hs
nix/: agent-service.nix  hix.nix  overlay.nix  selenium-server.nix  vm-config.nix
nix/materialized/: default.nix  plan.json
nix/materialized/.plan.nix/: agent-vm.nix
nix/materialized/cabal-files/: cereal-conduit.nix  conduit-extra.nix  os-string.nix  plow-log-async.nix  plow-log.nix  protolude.nix  stm-chans.nix  stm-conduit.nix
nix/modules/: mcp-proxy.nix  selenium-server.nix  virtiofs-qemu.nix  vm-base.nix
nix/pkgs/: agno.nix  codemcp.nix  mcp-language-server.nix  mcp-proxy-configurable-prefix.diff  mcp-proxy.nix  mcp-selenium.nix  mcp.nix
pkgs/: agno.nix  codemcp.nix  mcp-language-server.nix
src/: AgentVM.hs
src/AgentVM/: Class.hs  Env.hs  Flake.hs  Git.hs  Interactive.hs  Log.hs  Monad.hs  Nix.hs  Process.hs  SSH.hs  State.hs  StreamingProcess.hs  StreamingSocket.hs  Types.hs  VMCache.hs  VMStatus.hs
test/: Spec.hs  run_test_loop.sh
test-utils/AgentVM/: TestUtils.hs
test/AgentVM/: NixSpec.hs  ProcessSpec.hs  StateSpec.hs  StreamingEscapeSpec.hs  StreamingProcessSpec.hs  StreamingSocketSpec.hs  VMCacheSpec.hs
test/fixtures/: escape-test-simple.sh  infinite-loop-test.sh  interact.sh
test/fixtures/ProcessSpec/: echo_both.sh  echo_stderr.sh  echo_stdout.sh  exit_failure.sh  multiline_output.sh  no_output.sh  rapid_output.sh  unexpected_termination.sh  zombie_process.sh
