cabal-version:      3.0
name:               agent-vm
version:            0.1.0.0
synopsis:           Type-safe VM lifecycle management with Nix integration
description:        QEMU VM management system with compile-time state guarantees
license:            BSD-3-Clause
author:             Alberto Valverde
maintainer:         alberto@toscat.net
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall
                 -Werror
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wmissing-export-lists
                 -Wmissing-home-modules
                 -Wpartial-fields
                 -Wredundant-constraints
                 -Wunused-packages

library
    import:           warnings
    exposed-modules:  AgentVM
                    , AgentVM.Types
                    , AgentVM.Nix
                    , AgentVM.Log
                    , AgentVM.Env
                    , AgentVM.Class
                    , AgentVM.Monad
                    , AgentVM.Flake
                    , AgentVM.Interactive
                    , AgentVM.StreamingProcess
                    , AgentVM.StreamingSocket
                    , AgentVM.Git
                    , AgentVM.VMStatus
                    , AgentVM.VMCache
    build-depends:    base
                    , protolude
                    , unliftio
                    , unbounded-delays
                    , stm
                    , rolling-queue
                    , text
                    , bytestring
                    , aeson
                    , ansi-terminal
                    , directory
                    , shelly
                    , filepath
                    , plow-log
                    , mtl
                    , unix
                    , neat-interpolation
                    , process
                    , network
                    , microlens
                    , generic-lens
                    , template-haskell
                    , time
                    , atomic-write
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude

library test-utils
    import:           warnings
    exposed-modules:  AgentVM.TestUtils
    build-depends:    base
                    , protolude
                    , agent-vm
                    , unliftio
                    , retry
                    , plow-log
                    , plow-log-async
                    , filepath
                    , microlens
                    , generic-lens
                    , HUnit
    hs-source-dirs:   test-utils
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude

executable agent-vm
    import:           warnings
    main-is:          Main.hs
    build-depends:    protolude
                    , agent-vm
                    , optparse-applicative
                    , plow-log-async
                    , plow-log
                    , text
                    , directory
                    , unliftio
                    , unbounded-delays
                    , microlens
                    , microlens-mtl
                    , generic-lens
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
                      , ScopedTypeVariables
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite spec
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
                      AgentVM.StreamingProcessSpec
                    , AgentVM.StreamingSocketSpec
                    , AgentVM.StreamingEscapeSpec
                    , AgentVM.VMCacheSpec
                    , Paths_agent_vm
    build-depends:    base
                    , protolude
                    , agent-vm
                    , hspec
                    , unliftio
                    , bytestring
                    , network
                    , unbounded-delays
                    , text
                    , QuickCheck
                    , directory
                    , containers
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover

-- This one does not run as part of the hermetic test suite
executable agent-vm-test
    import:           warnings
    main-is:          Main.hs
    other-modules:    AgentVM.NixSpec
                    , AgentVM.VMLifecycleSpec
                    , AgentVM.ResetDestroySpec
                    , AgentVM.ShellEscapeKeySpec
    build-depends:    protolude
                    , agent-vm
                    , agent-vm:test-utils
                    , hspec
                    , directory
                    , generic-lens
                    , microlens
                    , unliftio
                    , filepath
                    , shelly
    hs-source-dirs:   integration-test
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
