cabal-version:      3.0
name:               agent-vm
version:            0.1.0.0
synopsis:           Type-safe VM lifecycle management with Nix integration
description:        QEMU VM management system with compile-time state guarantees
license:            MIT
author:             Agent VM Team
maintainer:         dev@agent-vm.org
category:           System
build-type:         Simple
extra-doc-files:    README.md
                    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  AgentVM
                    , AgentVM.Types
                    , AgentVM.State
                    , AgentVM.Process
                    , AgentVM.SSH
                    , AgentVM.Nix
                    , AgentVM.Log
                    , AgentVM.Config
    build-depends:    base
                    , typed-process
                    , async
                    , stm
                    , containers
                    , text
                    , bytestring
                    , aeson
                    , yaml
                    , co-log-core
                    , microlens
                    , generic-lens
                    , optparse-applicative
                    , ansi-terminal
                    , directory
                    , filepath
                    , time
                    , network
                    , mtl
                    , transformers
                    , exceptions
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , DeriveGeneric
                      , DeriveAnyClass
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , LambdaCase
                      , RecordWildCards
                      , TupleSections
                      , TypeApplications
                      , NamedFieldPuns

executable agent-vm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , agent-vm
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite agent-vm-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    AgentVM.StateSpec
                    , AgentVM.ProcessSpec
                    , AgentVM.IntegrationSpec
    build-depends:    base
                    , agent-vm
                    , hspec
                    , hspec-discover
                    , QuickCheck
                    , temporary
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover
