cabal-version:      3.0
name:               agent-vm
version:            0.1.0.0
synopsis:           Type-safe VM lifecycle management with Nix integration
description:        QEMU VM management system with compile-time state guarantees
license:            BSD-3-Clause
author:             Alberto Valverde
maintainer:         alberto@toscat.net
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall
               --  -Werror
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wmissing-export-lists
                 -Wmissing-home-modules
                 -Wpartial-fields
                 -Wredundant-constraints
                 -Wunused-packages
                 -Wmissing-import-lists
                 -Wno-unused-packages

library
    import:           warnings
    exposed-modules:  AgentVM
                    , AgentVM.Types
                    , AgentVM.State
                    , AgentVM.Process
                    , AgentVM.SSH
                    , AgentVM.Nix
                    , AgentVM.Log
                    , AgentVM.Config
    build-depends:    base
                    , protolude
                    , unliftio
                    , stm
                    , containers
                    , text
                    , bytestring
                    , aeson
                    , ansi-terminal
                    , directory
                    , time
                    , typed-process
                    , filepath
                    , plow-log
                    , plow-log-async
                    , network
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude

executable agent-vm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , protolude
                    , agent-vm
                    , optparse-applicative
                    , plow-log-async
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite spec
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    AgentVM.StateSpec
                    , AgentVM.ProcessSpec
                    , AgentVM.NixSpec
    build-depends:    base
                    , protolude
                    , agent-vm
                    , hspec
                    , unliftio
                    , typed-process
                    , temporary
                    , stm
                    , containers
                    , plow-log
                    , network
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover

-- This one does not run as part of the hermetic test suite
executable agent-vm-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , protolude
                    , agent-vm
                    , hspec
                    , temporary
    hs-source-dirs:   integration-test
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
