cabal-version:      3.0
name:               agent-vm
version:            0.1.0.0
synopsis:           Type-safe VM lifecycle management with Nix integration
description:        QEMU VM management system with compile-time state guarantees
license:            BSD-3-Clause
author:             Alberto Valverde
maintainer:         alberto@toscat.net
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
                 -Werror -Wunused-packages

library
    import:           warnings
    exposed-modules:  AgentVM
                    , AgentVM.Types
                    , AgentVM.State
                    , AgentVM.Process
                    , AgentVM.SSH
                    , AgentVM.Nix
                    , AgentVM.Log
                    , AgentVM.Config
    build-depends:    base
                    , typed-process
                    , protolude
                    , async
                    , unliftio
                    , stm
                    , containers
                    , unordered-containers
                    , text
                    , bytestring
                    , aeson
                    , yaml
                    , plow-log
                    , microlens
                    , generic-lens
                    , optparse-applicative
                    , ansi-terminal
                    , directory
                    , filepath
                    , time
                    , network
                    , mtl
                    , transformers
                    , exceptions
    hs-source-dirs:   src
    default-language: Haskell2010

executable agent-vm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , agent-vm
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite spec
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    AgentVM.StateSpec
                    , AgentVM.ProcessSpec
                    , AgentVM.IntegrationSpec
    build-depends:    base
                    , agent-vm
                    , hspec
                    , hspec-discover
                    , QuickCheck
                    , temporary
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover

-- This one does not run as part of the hermetic test suite
executable agent-vm-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , hspec
                    , QuickCheck
                    , temporary
                    , typed-process
                    , filepath
                    , protolude
    hs-source-dirs:   integration-test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
